Cabal-Version:      2.4
Name:               test
Version:            0.1.0.0
Author:              Lars Bruenjes
Maintainer:          brunjlar@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Lars Bruenjes
License:             Apache-2.0
License-files:       LICENSE

executable        pabtest
  main-is:            pabtest.GuessGame.hs
  other-modules:      ContractExample.GuessGame
  hs-source-dirs:      .
  build-depends:       aeson
                     , bytestring
                     , base ^>=4.14.1.0
                     , containers
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-pab
                     , text
                     , ghc-boot-th
                     , optparse-applicative
                     , aeson-pretty
                     , freer-simple
                     , freer-extras
                     , data-default
                     , stm
                     , prettyprinter
                     , plutus-ledger-api
                     , plutus-use-cases

                     
                     
         
                     
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
